feat(appbase): embed language panel in stage

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -358,6 +358,14 @@
               </article>
             </div>
           </section>
+
+          <section
+            id="language-stage"
+            class="ac-stage__panel ac-stage__panel--lang"
+            aria-labelledby="language-stage-title"
+            hidden
+            data-lang-stage
+          ></section>
         </main>
       </div>
 
