Expandir painel e alinhar botão de idioma

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -119,7 +119,7 @@
           </nav>
         </aside>
 
-        <main class="ac-stage" role="main">
+        <main class="ac-stage" role="main" data-stage-shell>
           <div class="ac-stage__empty" data-stage-empty>
             <div class="ac-stage__empty-main">
               <p data-stage-empty-message>
