--- a/appbase/index.html
+++ b/appbase/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Projeto Marco — AppBase</title>
+    <title data-i18n="app.document.title.default">Projeto Marco — AppBase</title>
     <link rel="stylesheet" href="./app.css" />
     <link rel="stylesheet" href="./settings/settings.css" />
     <meta
@@ -30,7 +30,7 @@
           </div>
           <div class="ac-headings">
             <span class="ac-h1" data-i18n="app.title">Projeto Marco</span>
-            <span class="ac-h2">Painel de controles</span>
+            <span class="ac-h2" data-i18n="app.header.subtitle">Painel de controles</span>
           </div>
         </div>
         <div class="ac-appbar__actions">
@@ -83,37 +83,49 @@
             <article class="ac-miniapp-card ac-miniapp-card--empty" role="listitem">
               <div class="ac-miniapp-card__empty">
                 <span class="ac-miniapp-card__empty-icon" aria-hidden="true">+</span>
-                <p class="ac-miniapp-card__empty-text">Slot vazio — Adicione um mini-app</p>
+                <p class="ac-miniapp-card__empty-text" data-i18n="app.rail.empty">
+                  Slot vazio — Adicione um mini-app
+                </p>
               </div>
             </article>
             <article class="ac-miniapp-card ac-miniapp-card--empty" role="listitem">
               <div class="ac-miniapp-card__empty">
                 <span class="ac-miniapp-card__empty-icon" aria-hidden="true">+</span>
-                <p class="ac-miniapp-card__empty-text">Slot vazio — Adicione um mini-app</p>
+                <p class="ac-miniapp-card__empty-text" data-i18n="app.rail.empty">
+                  Slot vazio — Adicione um mini-app
+                </p>
               </div>
             </article>
             <article class="ac-miniapp-card ac-miniapp-card--empty" role="listitem">
               <div class="ac-miniapp-card__empty">
                 <span class="ac-miniapp-card__empty-icon" aria-hidden="true">+</span>
-                <p class="ac-miniapp-card__empty-text">Slot vazio — Adicione um mini-app</p>
+                <p class="ac-miniapp-card__empty-text" data-i18n="app.rail.empty">
+                  Slot vazio — Adicione um mini-app
+                </p>
               </div>
             </article>
             <article class="ac-miniapp-card ac-miniapp-card--empty" role="listitem">
               <div class="ac-miniapp-card__empty">
                 <span class="ac-miniapp-card__empty-icon" aria-hidden="true">+</span>
-                <p class="ac-miniapp-card__empty-text">Slot vazio — Adicione um mini-app</p>
+                <p class="ac-miniapp-card__empty-text" data-i18n="app.rail.empty">
+                  Slot vazio — Adicione um mini-app
+                </p>
               </div>
             </article>
             <article class="ac-miniapp-card ac-miniapp-card--empty" role="listitem">
               <div class="ac-miniapp-card__empty">
                 <span class="ac-miniapp-card__empty-icon" aria-hidden="true">+</span>
-                <p class="ac-miniapp-card__empty-text">Slot vazio — Adicione um mini-app</p>
+                <p class="ac-miniapp-card__empty-text" data-i18n="app.rail.empty">
+                  Slot vazio — Adicione um mini-app
+                </p>
               </div>
             </article>
             <article class="ac-miniapp-card ac-miniapp-card--empty" role="listitem">
               <div class="ac-miniapp-card__empty">
                 <span class="ac-miniapp-card__empty-icon" aria-hidden="true">+</span>
-                <p class="ac-miniapp-card__empty-text">Slot vazio — Adicione um mini-app</p>
+                <p class="ac-miniapp-card__empty-text" data-i18n="app.rail.empty">
+                  Slot vazio — Adicione um mini-app
+                </p>
               </div>
             </article>
           </nav>
@@ -122,12 +134,16 @@
         <main class="ac-stage" role="main" data-stage-shell>
           <div class="ac-stage__empty" data-stage-empty>
             <div class="ac-stage__empty-main">
-              <p data-stage-empty-message>
+              <p
+                data-stage-empty-message
+                data-i18n="app.stage.empty.default"
+              >
                 Nenhum usuário cadastrado. Abra o painel pelo cabeçalho para iniciar o cadastro.
               </p>
               <p
                 class="ac-history__empty ac-history__empty--stage"
                 data-login-log-empty
+                data-i18n="app.history.empty"
               >
                 Sem registros.
               </p>
@@ -142,10 +158,17 @@
           >
             <header class="ac-stage__head">
               <div class="ac-stage__titles">
-                <h2 id="painel-stage-title" class="ac-title-lg" tabindex="-1">
+                <h2
+                  id="painel-stage-title"
+                  class="ac-title-lg"
+                  tabindex="-1"
+                  data-i18n="app.panel.stage.title"
+                >
                   Painel de controle
                 </h2>
-                <p class="ac-subtitle">Visão detalhada</p>
+                <p class="ac-subtitle" data-i18n="app.panel.stage.subtitle">
+                  Visão detalhada
+                </p>
               </div>
               <div class="ac-stage__actions">
                 <button
@@ -166,40 +189,84 @@
               >
                 <header class="ac-panel-card__head">
                   <div class="ac-panel-card__titles">
-                    <h3 id="painel-insights-title" class="ac-panel-card__title">
+                    <h3
+                      id="painel-insights-title"
+                      class="ac-panel-card__title"
+                      data-i18n="app.panel.kpis.title"
+                    >
                       Indicadores
                     </h3>
-                    <p class="ac-panel-card__subtitle">
+                    <p
+                      class="ac-panel-card__subtitle"
+                      data-i18n="app.panel.kpis.subtitle"
+                    >
                       Resumo do painel em tempo real.
                     </p>
                   </div>
                 </header>
-                <div class="ac-panel-kpis" role="group" aria-label="Indicadores do painel">
+                <div
+                  class="ac-panel-kpis"
+                  role="group"
+                  aria-label="Indicadores do painel"
+                  data-panel-kpis-group
+                >
                   <article class="ac-kpi-card" data-panel-kpi="status">
-                    <p class="ac-kpi-card__label">Status do painel</p>
+                    <p
+                      class="ac-kpi-card__label"
+                      data-i18n="app.panel.kpis.status.label"
+                    >
+                      Status do painel
+                    </p>
                     <div class="ac-kpi-card__value">
                       <span
                         class="ac-dot ac-dot--crit"
                         aria-hidden="true"
                         data-panel-status-dot
                       ></span>
-                      <span data-panel-status-label>Desconectado</span>
+                      <span
+                        data-panel-status-label
+                        data-i18n="app.panel.kpis.status.states.disconnected"
+                      >
+                        Desconectado
+                      </span>
                     </div>
-                    <p class="ac-kpi-card__meta" data-panel-status-hint>
+                    <p
+                      class="ac-kpi-card__meta"
+                      data-panel-status-hint
+                      data-i18n="app.panel.kpis.status.hint.empty"
+                    >
                       Cadastre um usuário para iniciar a sessão.
                     </p>
                   </article>
                   <article class="ac-kpi-card" data-panel-kpi="last-login">
-                    <p class="ac-kpi-card__label">Último acesso</p>
+                    <p
+                      class="ac-kpi-card__label"
+                      data-i18n="app.panel.kpis.last_login.label"
+                    >
+                      Último acesso
+                    </p>
                     <p class="ac-kpi-card__value" data-panel-last-login>—</p>
-                    <p class="ac-kpi-card__meta" data-panel-last-login-hint>
+                    <p
+                      class="ac-kpi-card__meta"
+                      data-panel-last-login-hint
+                      data-i18n="app.panel.kpis.last_login.hint.empty"
+                    >
                       Nenhum registro disponível.
                     </p>
                   </article>
                   <article class="ac-kpi-card" data-panel-kpi="events">
-                    <p class="ac-kpi-card__label">Eventos registrados</p>
+                    <p
+                      class="ac-kpi-card__label"
+                      data-i18n="app.panel.kpis.events.label"
+                    >
+                      Eventos registrados
+                    </p>
                     <p class="ac-kpi-card__value" data-panel-login-count>0</p>
-                    <p class="ac-kpi-card__meta" data-panel-login-hint>
+                    <p
+                      class="ac-kpi-card__meta"
+                      data-panel-login-hint
+                      data-i18n="app.panel.kpis.events.hint.empty"
+                    >
                       Aguardando primeiro registro.
                     </p>
                   </article>
@@ -212,25 +279,34 @@
               >
                 <header class="ac-panel-card__head">
                   <div class="ac-panel-card__titles">
-                    <h3 id="painel-cadastro-title" class="ac-panel-card__title">
+                    <h3
+                      id="painel-cadastro-title"
+                      class="ac-panel-card__title"
+                      data-i18n="app.panel.form.title"
+                    >
                       Cadastro
                     </h3>
-                    <p class="ac-panel-card__subtitle">
+                    <p
+                      class="ac-panel-card__subtitle"
+                      data-i18n="app.panel.form.subtitle"
+                    >
                       Atualize os dados salvos neste dispositivo.
                     </p>
                   </div>
                 </header>
                 <dl class="ac-panel-summary ac-tile__meta" role="list">
                   <div>
-                    <dt>Usuário</dt>
-                    <dd data-login-user>Não configurado</dd>
+                    <dt data-i18n="app.panel.summary.user">Usuário</dt>
+                    <dd data-login-user data-i18n="app.panel.summary.empty">
+                      Não configurado
+                    </dd>
                   </div>
                   <div>
-                    <dt>Conta</dt>
+                    <dt data-i18n="app.panel.summary.account">Conta</dt>
                     <dd data-login-account>—</dd>
                   </div>
                   <div>
-                    <dt>Último acesso</dt>
+                    <dt data-i18n="app.panel.summary.last_login">Último acesso</dt>
                     <dd data-login-last>—</dd>
                   </div>
                 </dl>
@@ -241,15 +317,30 @@
                   autocomplete="off"
                 >
                   <label class="ac-field">
-                    <span class="ac-field__label">Nome completo</span>
+                    <span
+                      class="ac-field__label"
+                      data-i18n="app.panel.form.fields.name"
+                    >
+                      Nome completo
+                    </span>
                     <input name="nome" type="text" required />
                   </label>
                   <label class="ac-field">
-                    <span class="ac-field__label">E-mail</span>
+                    <span
+                      class="ac-field__label"
+                      data-i18n="app.panel.form.fields.email"
+                    >
+                      E-mail
+                    </span>
                     <input name="email" type="email" required />
                   </label>
                   <label class="ac-field">
-                    <span class="ac-field__label">Telefone (opcional)</span>
+                    <span
+                      class="ac-field__label"
+                      data-i18n="app.panel.form.fields.phone"
+                    >
+                      Telefone (opcional)
+                    </span>
                     <input
                       name="telefone"
                       type="tel"
@@ -258,7 +349,12 @@
                     />
                   </label>
                   <label class="ac-field">
-                    <span class="ac-field__label">Senha</span>
+                    <span
+                      class="ac-field__label"
+                      data-i18n="app.panel.form.fields.password"
+                    >
+                      Senha
+                    </span>
                     <input
                       name="senha"
                       type="password"
@@ -271,6 +367,7 @@
                       class="ac-btn ac-btn--primary"
                       type="submit"
                       data-action="login-save"
+                      data-i18n="app.panel.form.submit"
                     >
                       Salvar alterações
                     </button>
@@ -284,8 +381,13 @@
                 ></p>
                 <section class="ac-session ac-panel-session">
                   <div class="ac-session__intro">
-                    <p class="ac-sheet__status">Sessão atual</p>
-                    <p class="ac-session__description">
+                    <p class="ac-sheet__status" data-i18n="app.panel.session.current">
+                      Sessão atual
+                    </p>
+                    <p
+                      class="ac-session__description"
+                      data-i18n="app.panel.session.description"
+                    >
                       Encerre a sessão mantendo os dados armazenados neste navegador
                       ou remova todas as informações do cadastro.
                     </p>
@@ -294,11 +396,13 @@
                     class="ac-session__actions"
                     role="group"
                     aria-label="Ações da sessão"
+                    data-session-actions
                   >
                     <button
                       class="ac-btn ac-btn--ghost"
                       type="button"
                       data-action="logout-preserve"
+                      data-i18n="app.panel.session.actions.logout"
                     >
                       Encerrar sessão
                     </button>
@@ -306,6 +410,7 @@
                       class="ac-btn ac-btn--danger"
                       type="button"
                       data-action="logout-clear"
+                      data-i18n="app.panel.session.actions.logout_clear"
                     >
                       Encerrar e remover dados
                     </button>
@@ -319,10 +424,17 @@
               >
                 <header class="ac-panel-card__head ac-history__head">
                   <div class="ac-panel-card__titles ac-history__titles">
-                    <h3 id="login-log-title" class="ac-panel-card__title">
+                    <h3
+                      id="login-log-title"
+                      class="ac-panel-card__title"
+                      data-i18n="app.panel.history.title"
+                    >
                       Histórico de acessos
                     </h3>
-                    <p class="ac-panel-card__subtitle ac-history__subtitle">
+                    <p
+                      class="ac-panel-card__subtitle ac-history__subtitle"
+                      data-i18n="app.panel.history.subtitle"
+                    >
                       Acompanhe logins e logoffs registrados neste navegador.
                     </p>
                   </div>
@@ -335,14 +447,22 @@
                     <table class="ac-table ac-table--compact" aria-live="polite">
                       <thead>
                         <tr>
-                          <th scope="col">Evento</th>
-                          <th scope="col">Horário</th>
+                          <th scope="col" data-i18n="app.panel.history.table.event">
+                            Evento
+                          </th>
+                          <th scope="col" data-i18n="app.panel.history.table.time">
+                            Horário
+                          </th>
                         </tr>
                       </thead>
                       <tbody data-login-log-body></tbody>
                     </table>
                   </div>
-                  <p class="ac-history__empty" data-login-log-empty>
+                  <p
+                    class="ac-history__empty"
+                    data-login-log-empty
+                    data-i18n="app.history.empty"
+                  >
                     Sem registros.
                   </p>
                 </div>
@@ -367,12 +487,21 @@
             aria-hidden="true"
             data-footer-status-dot
           ></span>
-          <span class="ac-footer__status-text">Status:</span>
-          <span class="ac-footer__status-label" data-footer-status-label>
+          <span
+            class="ac-footer__status-text"
+            data-i18n="app.footer.status.label"
+          >
+            Status:
+          </span>
+          <span
+            class="ac-footer__status-label"
+            data-footer-status-label
+            data-i18n="app.footer.status.disconnected"
+          >
             Desconectado
           </span>
         </span>
-        <span class="ac-footer__meta">
+        <span class="ac-footer__meta" data-i18n="app.footer.meta">
           Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1
         </span>
       </footer>
