feat: replace locale panel with dropdown menu

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -443,13 +443,14 @@
                       class="ac-panel-card__title"
                       data-i18n="app.panel.history.title"
                     >
-                      Histórico de acessos
+                      Histórico de atividades
                     </h3>
                     <p
                       class="ac-panel-card__subtitle ac-history__subtitle"
                       data-i18n="app.panel.history.subtitle"
                     >
-                      Acompanhe logins e logoffs registrados neste navegador.
+                      Acompanhe logins, logoffs e trocas de idioma registradas
+                      neste navegador.
                     </p>
                   </div>
                 </header>
@@ -483,14 +484,6 @@
               </article>
             </div>
           </section>
-
-          <section
-            id="language-stage"
-            class="ac-stage__panel ac-stage__panel--lang"
-            aria-labelledby="language-stage-title"
-            hidden
-            data-lang-stage
-          ></section>
         </main>
       </div>
 
