fix: render locale menu markup with header

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -74,6 +74,12 @@
               >⛶</span
             >
           </button>
+          <div class="ac-locale-menu" data-locale-menu hidden aria-hidden="true">
+            <p class="ac-locale-menu__title" data-i18n="app.locale.menu.title">
+              Idioma do AppBase
+            </p>
+            <ul class="ac-locale-menu__list" data-locale-options role="menu"></ul>
+          </div>
         </div>
       </header>
 
