Rename password copy to PIN across locales

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -371,7 +371,7 @@
                       class="ac-field__label"
                       data-i18n="app.panel.form.fields.password"
                     >
-                      Senha
+                      PIN
                     </span>
                     <div class="ac-field__control">
                       <input
@@ -390,8 +390,8 @@
                         type="button"
                         data-password-toggle
                         aria-pressed="false"
-                        aria-label="Mostrar senha"
-                        title="Mostrar senha"
+                        aria-label="Mostrar PIN"
+                        title="Mostrar PIN"
                       >
                         <span aria-hidden="true" data-password-toggle-icon>👁</span>
                       </button>
