Document Playwright preview captures and fix history tests

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -745,6 +745,12 @@
                             <tr>
                               <th
                                 scope="col"
+                                data-i18n="app.panel.history.table.revision"
+                              >
+                                Revisão
+                              </th>
+                              <th
+                                scope="col"
                                 data-i18n="app.panel.history.table.event"
                               >
                                 Evento
@@ -820,8 +826,17 @@
             Sincronizado
           </span>
         </span>
-        <span class="ac-footer__meta" data-i18n="app.footer.meta">
-          Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1
+        <span class="ac-footer__meta">
+          <span data-i18n="app.footer.meta.base">
+            Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1
+          </span>
+          <span
+            class="ac-footer__revision"
+            data-footer-revision
+            data-i18n="app.footer.meta.revision.empty"
+          >
+            Revisão inicial • Aguardando atualizações
+          </span>
         </span>
       </footer>
     </div>
