Restore control panel state to previous baseline

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -820,17 +820,8 @@
             Sincronizado
           </span>
         </span>
-        <span class="ac-footer__meta">
-          <span data-i18n="app.footer.meta.base">
-            Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1
-          </span>
-          <span
-            class="ac-footer__revision"
-            data-footer-revision
-            data-i18n="app.footer.meta.revision.empty"
-          >
-            Revisão inicial • Aguardando atualizações
-          </span>
+        <span class="ac-footer__meta" data-i18n="app.footer.meta">
+          Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1
         </span>
       </footer>
     </div>
