Align header actions and refresh stage styling

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -48,7 +48,7 @@
           </p>
         </div>
         <div class="ac-appbar__actions">
-          <div class="ac-appbar__actions-buttons">
+          <div class="ac-appbar__actions-buttons" data-header-actions>
             <button
               class="ac-theme-toggle ac-panel-toggle"
               type="button"
