chore(appbase): substituir painel beta pelo miniapp R1.10

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -134,6 +134,16 @@
             </h2>
           </header>
           <nav class="ac-rail" role="list" data-miniapp-rail></nav>
+          <nav
+            class="ac-rail__menu"
+            aria-label="Atalhos visuais"
+            data-static-miniapps
+          >
+            <a class="ac-rail__menu-link" href="../painel/index.html">
+              <span class="ac-icbtn" data-ic="chev-right" aria-hidden="true"></span>
+              <span>Painel de Controle</span>
+            </a>
+          </nav>
         </aside>
 
         <main class="ac-stage" role="main" data-stage-shell>
