--- a/painel/index.html
+++ b/painel/index.html
@@ -2,18 +2,18 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../miniapps/control_panel/index.html" />
+    <meta http-equiv="refresh" content="0; url=../appbase/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Marco · Painel de Controle</title>
-    <link rel="canonical" href="../miniapps/control_panel/index.html" />
+    <link rel="canonical" href="../appbase/index.html" />
     <link rel="stylesheet" href="../appbase/app.css" />
   </head>
   <body>
     <main class="ac-stage" role="main">
       <div class="ac-stage__empty">
         <p>
-          Redirecionando para o Painel de Controle…
-          <a href="../miniapps/control_panel/index.html">Acesse manualmente</a> se o carregamento não acontecer.
+          Redirecionando para o AppBase…
+          <a href="../appbase/index.html">Acesse manualmente</a> se o carregamento não acontecer.
         </p>
       </div>
     </main>
